k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pronto
  labels:
    app.kubernetes.io/name: pronto
    app.kubernetes.io/part-of: pronto-system
