k8s/kaniko-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pronto-kaniko
  namespace: pronto
spec:
  restartPolicy: Never
  volumes:
    - name: workspace
      emptyDir: {}
  containers:
    - name: kaniko
      image: gcr.io/kaniko-project/executor:v1.23.0-debug
      args:
        - "--context=dir:///workspace/src"
        - "--dockerfile=/workspace/src/Dockerfile"
        - "--destination=pronto-registry:5000/pronto-app:v1"
        - "--insecure"
        - "--insecure-pull"
        - "--skip-tls-verify"
      volumeMounts:
        - name: workspace
          mountPath: /workspace
