k8s/03.5-postgrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pronto-rest
  namespace: pronto
  labels:
    app.kubernetes.io/name: pronto-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pronto-rest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pronto-rest
    spec:
      containers:
        - name: postgrest
          image: postgrest/postgrest:v12.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: pronto-rest
  namespace: pronto
  labels:
    app.kubernetes.io/name: pronto-rest
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app.kubernetes.io/name: pronto-rest
